--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 %head
   %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
-  %title ADD Blois - Plannings
+  %title Eglise CRM - Application de gestion des membres
 
   = stylesheet_link_tag 'application', media: 'all'
   = csrf_meta_tags
@@ -26,8 +26,8 @@
         %strong
           Copyright ©
           = Date.today.year
-          = link_to "http://www.eglisedeblois.fr", target: "_blank", rel: :nofollow do
-            Eglise Evangélique de Blois
+          = link_to "http://www.flech.me", target: "_blank", rel: :nofollow do
+            FlechMe - Développeur d'application
         Tous droits réservés.
 
     = javascript_include_tag 'application'
