--- a/app/views/layouts/_topbar.html.haml
+++ b/app/views/layouts/_topbar.html.haml
@@ -1,11 +1,11 @@
 %a.logo{:href => "/"}
   %span.logo-mini
-    %b ADD
-    Blois
+    %b E
+    CRM
   / logo for regular state and mobile devices
   %span.logo-lg
-    %b ADD
-    Blois
+    %b Eglise
+    CRM
 / Header Navbar: style can be found in header.less
 %nav.navbar.navbar-static-top{:role => "navigation"}
   / Sidebar toggle button
