--- a/app/views/devise/invitations/new.html.haml
+++ b/app/views/devise/invitations/new.html.haml
@@ -17,7 +17,7 @@
             .col-md-6
               .form-group
                 = f.label :lastname
-                = f.text_field :lastname, :autofocus => true, class: 'form-control'
+                = f.text_field :lastname, class: 'form-control'
 
         .form-group
           = f.label :email
