--- a/app/views/association/teams/show.html.haml
+++ b/app/views/association/teams/show.html.haml
@@ -1,5 +1,5 @@
 %section.content-header
-  = link_to teams_url, class: 'btn btn-sm btn-info pull-right' do
+  = link_to [:association, :teams], class: 'btn btn-sm btn-info pull-right' do
     = fa_icon "angle-left"
     Mes équipes
 
@@ -17,7 +17,7 @@
           = fa_icon 'calendar'
           Planning
         .box-body
-          #team-planning.calendar{data:{url: new_team_event_path(@team, format: :js)}}
+          #team-planning.calendar{data:{url: new_association_team_event_path(@team, format: :js)}}
 
     .col-md-6
       .box
@@ -25,7 +25,7 @@
           = fa_icon 'users'
           Membres
         .box-body
-          %table.table.table-bordered.table-striped
+          %table.table.table-bordered.table-striped.table-condensed.table-sm.mb-3
             %thead
               %tr
                 %th Nom
@@ -41,25 +41,26 @@
                   %td
                     = fa_icon "#{(@team.is_leader?(user.id)) ? 'check text-success' : 'times text-danger'}"
                   %td
-                    = link_to team_membership_path(@team, user), method: :delete, data:{confirm: "Êtes vous sûr de vouloir supprimer ce membre de l'équipe ?"}, class: "btn btn-flat btn-danger btn-xs" do
-                      = fa_icon "trash"
+                    .btn-group
+                      = link_to association_team_membership_path(@team, user), method: :delete, data:{confirm: "Êtes vous sûr de vouloir supprimer ce membre de l'équipe ?"}, class: "btn btn-flat btn-danger btn-sm" do
+                        = fa_icon "trash"
 
-                    - if @team.is_leader?(user.id)
-                      = link_to team_destitute_membership_path(@team, user), class: "btn btn-flat btn-xs btn-danger" do
-                        = fa_icon "minus"
-                    - else
-                      = link_to team_promute_membership_path(@team, user), class: "btn btn-flat btn-xs btn-info" do
-                        = fa_icon "plus"
+                      - if @team.is_leader?(user.id)
+                        = link_to association_team_destitute_membership_path(@team, user), class: "btn btn-flat btn-sm btn-danger" do
+                          = fa_icon "minus"
+                      - else
+                        = link_to association_team_promute_membership_path(@team, user), class: "btn btn-flat btn-sm btn-info" do
+                          = fa_icon "plus"
 
 
-          = will_paginate @members, renderer: BootstrapPagination::Rails, next_label: ">", previous_label: "<"
+          = will_paginate @members, renderer: WillPaginate::ActionView::BootstrapLinkRenderer
 
       .box.box-success
         .box-header.with-border
           = fa_icon "plus"
           Ajouter un membre à l'équipe
         .box-body
-          = form_for [@team, @membership] do |f|
+          = form_for [:association, @team, @membership] do |f|
             .form-group
               = f.select :user_id, options_from_collection_for_select(@users, :id, :name), {include_blank: "Choisir un membre"}, class: "form-control"
               %span.help-block
@@ -73,12 +74,13 @@
                   Cocher cette case si vous souhaitez que ce membre soit le responsable.
 
             .form-actions
-              = f.hidden_field :team_id
+              = f.hidden_field :membershipable_id
               %button.btn.btn-success{type: :submit}
                 Ajouter
+
 #event.modal.fade{tabindex: '-1', role: "dialog"}
   .modal-dialog{role: "document"}
     .modal-content
 
 - content_for :scripts do
-  = render "teams/script"
+  = render "association/teams/script"
