--- a/app/views/association/users/show.html.haml
+++ b/app/views/association/users/show.html.haml
@@ -4,7 +4,7 @@
     %small Profil du bénévole
   - if can? :update, @user
     .actions
-      = link_to edit_user_path(@user), class: "btn btn-flat btn-success" do
+      = link_to [:edit, :association, @user], class: "btn btn-flat btn-success" do
         = fa_icon "edit"
         Modifier
 
@@ -22,7 +22,7 @@
               %p.text-muted.text-center
                 = @member.sibling_get_status
                 de la famille
-                = link_to @member.family do
+                = link_to [:association, @member.family] do
                   = @member.family_name
 
           - else
@@ -30,16 +30,16 @@
             - if @match
               %p
                 Il semble qu'un membre utilise la même adresse email :
-                = link_to @match do
+                = link_to [:association, @match] do
                   = "#{@match.name} (#{@match.email})"
 
-              = form_for @match do |f|
+              = form_for [:association, @match] do |f|
                 = f.hidden_field :user_id, value: @user.id
                 %button.btn.btn-warning.btn-flat{type: :submit}
                   Associer ce membre et ce bénévole
 
             - else
-              = form_for Member.new do |f|
+              = form_for [:association, Member.new] do |f|
                 = f.hidden_field :firstname, value: @user.firstname
                 = f.hidden_field :lastname, value: @user.lastname
                 = f.hidden_field :email, value: @user.email
@@ -48,9 +48,6 @@
 
                 %button.btn.btn-warning.btn-flat{type: :submit}
                   Créer sa fiche membre
-
-
-
 
     .col-md-8
       .box.box-success
@@ -66,7 +63,7 @@
                 %h3.page-header Ses équipes
                 - @user.teams.each do |team|
                   %p
-                    = link_to team do
+                    = link_to [:association, team] do
                       = fa_icon "square", style: "color: #{team.color}"
                       = team.label
 
