--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,13 +1,13 @@
 %section.sidebar
   %ul.sidebar-menu
     %li{class: "#{'active' if params[:controller].match(/pages/)}"}
-      = link_to root_url do
+      = link_to association_root_url do
         = fa_icon "dashboard"
         %span Accueil
 
     %li.treeview{class: "#{'active' if params[:controller].match(/members|families|preview/)}"}
       = link_to association_members_preview_path do
-        = fa_icon 'users'
+        = fa_icon 'user'
         Membres
         %span.pull-right-container
           = fa_icon 'angle-right', class: "pull-right"
@@ -25,3 +25,13 @@
           = link_to [:association, :families] do
             = fa_icon 'users'
             Familles
+
+    %li{class: "#{'active' if params[:controller].match(/users/)}"}
+      = link_to [:association, :users] do
+        = fa_icon 'leaf'
+        bénévoles
+
+    %li{class: "#{'active' if params[:controller].match(/teams/)}"}
+      = link_to [:association, :teams] do
+        = fa_icon 'users'
+        Equipes
