Front and some Users interface

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,11 @@
-%head
-  %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
-  %title Eglise CRM - Application de gestion des membres
+!!!
+%html
+  %head
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
+    %title Eglise CRM - Application de gestion des membres
 
-  = stylesheet_link_tag 'application', media: 'all'
-  = csrf_meta_tags
+    = stylesheet_link_tag 'application', media: 'all'
+    = csrf_meta_tags
 
   %body.skin-blue.sidebar-mini
     .wrapper
