--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,9 +1,11 @@
-%section.content
+%section.pb_cover_v3.overflow-hidden.cover-bg-indigo.cover-bg-opacity.text-left.pb_gradient_v1.pb_slant-light.text-light.py-5
   .row.justify-content-center
     .col-md-6
 
       .box
         .box-body
+          %h2 Je crée mon compte
+
           = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
             = devise_error_messages!
 
