--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,4 +1,4 @@
-%section.sidebar
+%section.sidebar#sidebar
   %ul.sidebar-menu
     %li{class: "#{'active' if params[:controller].match(/pages/)}"}
       = link_to association_root_url do
