--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
         = yield
         .clearfix
 
-      %footer.main-footer
+      %footer.main-footer.static-bottom
         .pull-right.hidden-xs
           %b Version
           1.0
